crates/lambda3/src/snapshots/lambda3__cst__tests__parse_expr_test@missing_body.l3.snap
---
source: crates/lambda3/src/cst.rs
expression: "(input, parse.errors, node)"

---
(
    "(\\x.)",
    [
        "Expected expression",
    ],
    ROOT@0..5
      PAREN_E@0..5
        L_PAREN@0..1 "("
        LAMBDA_E@1..4
          BACKSLASH@1..2 "\\"
          VAR_P@2..3
            IDENT@2..3 "x"
          DOT@3..4 "."
          ERROR@4..4
        R_PAREN@4..5 ")"
    ,
)
