crates/lambda3/src/snapshots/lambda3__cst__tests__parse_expr_test@simple_application.l3.snap
---
source: crates/lambda3/src/cst.rs
expression: "(input, parse.errors, node)"

---
(
    "x x",
    [],
    ROOT@0..3
      APPLICATION_E@0..3
        VAR_E@0..1
          IDENT@0..1 "x"
        VAR_E@1..3
          WHITESPACE@1..2 " "
          IDENT@2..3 "x"
    ,
)
